--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@nuxt/icon": "1.13.0",
     "@nuxt/ui": "^3.1.3",
     "@nuxtjs/tailwindcss": "7.0.0-beta.0",
     "@pinia/nuxt": "^0.11.0",
+    "@vee-validate/zod": "^4.15.0",
     "js-cookie": "^3.0.5",
     "nuxt": "^3.17.4",
     "pinia": "^3.0.2",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.15",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^3.25.42"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
